# clanker-gauntlet

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.github/: dependabot.yml
alembic/: README.md  env.py
alembic/versions/: 404ee19d7507_initial_schema.py  b3c1a2d4e5f6_rename_session_mode_to_script_speed.py  c4d2e3f5a6b7_add_waiver_config_and_rename_script_speed.py  d505c3398f5a_structured_traces_dual_stream_routing.py  d5e3f4a6b7c8_add_user_api_keys_multi_provider.py  e1a2b3c4d5e6_teams_fk_on_delete_cascade.py  e6f4a5b8c9d0_add_leagues_and_membership.py  f7a8b9c0d1e2_add_league_api_keys_and_allow_shared_key.py
backend/: config.py  main.py  worker.py
backend/agents/: archetypes.py  key_resolver.py  llm_client.py  llm_factory.py  model_defaults.py
backend/api/: admin.py  deps.py  health.py  leagues.py  lineup.py  scripts.py  sessions.py  trades.py  users.py  ws.py
backend/auth/: auth0.py  crypto.py  dependencies.py  jwt.py  router.py
backend/core/: event_runner.py  runner_service.py  sport_config.py  team_factory.py  world_state.py
backend/data/: cache.py  compiler.py  models.py
backend/db/: models.py  session.py
backend/league/: engine.py  membership.py  trades.py  waivers.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_auth_endpoints.py  test_auth_utils.py  test_data_models.py  test_event_runner.py  test_scoring.py  test_waiver_resolution.py  test_world_state.py
(+32 files in other folders)
